<resources>
    <string name="app_name">Iteso Store</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="mac_title">Mac Desktop</string>
    <string name="aw_title">Alienware Laptop</string>
    <string name="lanix_title">Lanix Desktop</string>
    <string name="tv_title">Bravo TV</string>
    <string name="blender_title">Hamilton Beach Blender</string>
    <string name="microwave_title">Breville Microwave</string>
    <string name="speakers_title">Creative Speakers</string>

    <string name="bestbuy_store">BestBuy</string>
    <string name="dell_store">DELL</string>
    <string name="frys_store">Fry"'"s</string>
    <string name="sears_store">Sears</string>

    <string name="bestbuy_phone">3316257985</string>
    <string name="dell_phone">3306792476</string>
    <string name="frys_phone">3339712490</string>
    <string name="sears_phone">3319573091</string>

    <string name="mac_location">Zapopan</string>
    <string name="aw_location">Guadalajara</string>
    <string name="lanix_location">Tlaquepaque</string>
    <string name="tv_location">Guadalajara</string>
    <string name="blender_location">Tlaquepaque</string>
    <string name="microwave_location">Zapopan</string>
    <string name="speakers_location">Tonala</string>

    <string name="activity_product_save">Save</string>
    <string name="activity_product_cancel">Cancel</string>
    <string name="activity_product_title">Introduce Title...</string>
    <string name="activity_product_store">Introduce Store...</string>
    <string name="activity_product_location">Introduce Location...</string>
    <string name="activity_product_phone">Introduce Phone...</string>


</resources>
